# crypto-swing-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOVER.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: API_DASHBOARD.md  DATA_SOURCES.md  DEVLOG.md  PHASE3_CODEX_HANDOFF.md  PHASE6_LIVE_ACCEPTANCE.md  ROADMAP_STATUS.md  SELFTEST_REPORT.md  STRATEGY_BACKTEST_FINDINGS.md  SUBPROJECT_C_FINDINGS.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  guide.md  index.css  main.jsx  theme.css
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-05-31/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-01/: .graphify_analysis.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-02/: .graphify_semantic_marker  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-03/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-13/: GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
lab/: kronos_precompute.py  strategy_backtest.py  strategy_diag.py  strategy_htf.py  strategy_kronos.py
lab/core-engine/: Dockerfile  README.md  pyproject.toml
lab/core-engine/docs/: DEPLOY_NEXT.md  LIVE_ACCEPTANCE.md
lab/core-engine/src/core_engine/: __init__.py  __main__.py  backtest.py  brain.py  config.py  contracts.py  executor.py  journal.py  loop.py  market.py  position_store.py  risk_gate.py
lab/core-engine/tests/: conftest.py  test_backtest.py  test_brain.py  test_contracts.py  test_executor.py  test_journal.py  test_loop.py  test_loop_position_persist.py  test_market.py  test_position_store.py  test_risk_gate.py  test_smoke.py
scripts/: backup-data-dir.sh  download_model.py  nightly-selftest.sh
src/swingbot/: __init__.py  backfill_cli.py  backtest.py  cli.py  config.py  confluence.py  credentials.py  discovery.py  exits.py  graduation.py  indicators.py  journal.py  kronos_preset.py  managed_profiles.py  metrics.py  notify.py  orchestrator.py  portfolio_risk.py  presets.py  price_cache.py  probe_marker.py  profile.py  profiles.py  rebalance.py  regime.py  risk.py  run.py  runtime_state.py  service.py  sizing.py  snapshot.py  state.py  strategy_search.py  supervisor.py  telemetry.py  trade_store.py  types.py  universe.py  web.py  webmain.py
tests/: test_advisor_digest.py  test_advisor_journal.py  test_advisor_schema.py  test_advisor_service.py  test_alpaca_broker.py  test_alpaca_data.py  test_auth_bootstrap.py  test_backfill.py  test_backfill_cli.py  test_backtest_integration.py  test_brain_settings.py  test_broker_adapter.py  test_candle_store.py  test_ccxt_network.py  test_ccxt_provider.py  test_cli.py  test_config.py  test_confluence.py  test_credentials.py  test_credentials_multibroker.py  test_csv_import.py  test_data.py  test_data_source.py  test_decision_brain.py  test_decision_guardrails.py  test_decision_ollama.py  test_decision_prompt.py  test_decision_proposals.py  test_discovery.py  test_exit_decision.py  test_exits.py  test_graduation.py  test_indicators.py  test_journal_metrics.py  test_kronos_backtest.py  test_kronos_forecast.py  test_kronos_preset.py  test_kronos_smoke.py  test_managed_profiles.py  test_managed_reconcile.py  (+83 more)
tests/autodash/: test_backtest_runner.py  test_e2e.py  (+6 more)
(+178 files in other folders)
