[project]
name = "swingbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "numpy>=1.24", "alpaca-py>=0.20", "fastapi>=0.110", "uvicorn>=0.29", "ccxt>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
kronos = [
    "torch>=2.0",
    "huggingface_hub>=0.20",
    "einops",
    "safetensors",
    "tqdm",
]

[project.scripts]
swingbot-backtest = "swingbot.cli:main"
swingbot-run = "swingbot.run:main"
swingbot-web = "swingbot.webmain:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
