[project]
name = "swingbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "numpy>=1.24", "alpaca-py>=0.20", "fastapi>=0.110", "uvicorn>=0.29", "ccxt>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "playwright>=1.40", "pytest-playwright>=0.4"]
kronos = [
    "torch>=2.0",
    "huggingface_hub>=0.20",
    "einops",
    "safetensors",
    "tqdm",
]

[project.scripts]
swingbot-backtest = "swingbot.cli:main"
swingbot-run = "swingbot.run:main"
swingbot-web = "swingbot.webmain:main"
swingbot-backfill = "swingbot.backfill_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: opt-in tests that require a live :8000 instance and real Ollama"]
